--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semaine31a-store-orbi",
+  "name": "semaine28-promotions",
   "version": "1.0.0",
   "description": "Email template build process",
   "main": "gulpfile.mjs",
